[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/texture1.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/new_styleboxflat.tres" type="StyleBox" id=3]
[ext_resource path="res://Control.gd" type="Script" id=4]
[ext_resource path="res://assets/new_styleboxline.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/texture2.tres" type="StyleBox" id=6]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Panel" parent="."]
margin_left = 23.7842
margin_top = 16.6489
margin_right = 332.784
margin_bottom = 197.649
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
margin_left = 7.0
margin_top = 1.0
margin_right = 321.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="TextureRect/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 143.0
text = "Hellooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo"
scroll_active = false

[node name="Panel" type="Panel" parent="."]
margin_left = 721.045
margin_top = 339.935
margin_right = 1000.05
margin_bottom = 435.935
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 279.0
margin_bottom = 96.0
theme = SubResource( 4 )
custom_constants/hseparation = 5

[node name="Label" type="Label" parent="Panel/MarginContainer"]
margin_top = 17.0
margin_right = 279.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "click"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 795.137
margin_top = 38.2679
margin_right = 955.137
margin_bottom = 121.268
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer"]
margin_right = 160.0
margin_bottom = 83.0
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Hello"

[node name="Panel2" type="Panel" parent="."]
margin_left = 27.6685
margin_top = 237.644
margin_right = 257.669
margin_bottom = 469.644
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
margin_left = 60.408
margin_top = 81.1732
margin_right = 166.408
margin_bottom = 169.173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2/MarginContainer"]
margin_top = 33.0
margin_right = 106.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heyyy"
align = 1
valign = 1

[node name="Panel3" type="Panel" parent="."]
margin_left = 403.95
margin_top = 39.7141
margin_right = 648.95
margin_bottom = 204.714
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel3"]
margin_right = 244.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel3/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 244.0
margin_bottom = 160.0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 274.295
margin_top = 238.675
margin_right = 683.295
margin_bottom = 496.675
resizable = true
dialog_text = "Hello"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel4" type="Panel" parent="."]
visible = false
margin_left = 302.0
margin_top = 244.0
margin_right = 692.0
margin_bottom = 506.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 722.234
margin_top = 355.746
margin_right = 1037.23
margin_bottom = 485.746
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="."]
margin_left = 722.0
margin_top = 356.0
margin_right = 1006.0
margin_bottom = 458.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel3/MarginContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
